--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ version:          1.0
 gitbook_version:  3.2.3
 
 url:              'bkp501031.xyz'
-baseurl:          '/'
+baseurl:          '/index.html'
 rss:              RSS
 
 # bootstrap: use the remote theme for the site itself
