--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ description: >
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'bkp501031.xyz'
-baseurl:          '/index.html'
+url:              'https://bkp501031.xyz'
+baseurl:          '/'
 rss:              RSS
 
 # bootstrap: use the remote theme for the site itself
