fix: udpate deployment trigger branch

--- a/.github/deploy.yaml
+++ b/.github/deploy.yaml
@@ -2,7 +2,7 @@ name: Deploy app
 on:
   push:
     branches:
-      - 'build'
+      - 'main'
 concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
